[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/Coin.gd" type="Script" id=1]
[ext_resource path="res://assets/png/Sprite.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/CoinDrop.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 5 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8, 3 )

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shape/Shadow:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.15, 0.05 ), Vector2( 0.1, 0.025 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( 0, -100 ), Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.843137, 0, 1 ), Color( 1, 0.843137, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shape:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 50.0

[node name="Coin" type="KinematicBody2D" groups=[
"Coins",
]]

input_pickable = true
collision_layer = 2
collision_mask = 4
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
magnet_speed = 100

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="." index="0"]

rect = Rect2( -1, -1, 2, 2 )
_sections_unfolded = [ "Transform" ]

[node name="PickupArea" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="PickupArea" index="0"]

rotation = 15.708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="2"]

editor/display_folded = true
modulate = Color( 1, 0.843137, 0, 1 )
position = Vector2( 0, -20 )
scale = Vector2( 0.15, 0.2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sprite" index="0"]

self_modulate = Color( 0, 0, 0, 0.196078 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite2" type="Sprite" parent="Sprite" index="1"]

position = Vector2( 10, 0 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="." index="3"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Shadow" type="Sprite" parent="Shape" index="0"]

modulate = Color( 0, 0, 0, 0.196078 )
scale = Vector2( 0.15, 0.05 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="PickupSound" type="AudioStreamPlayer2D" parent="." index="4"]

visible = false
stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = "Bobbing"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Bobbing = SubResource( 3 )
anims/Collected = SubResource( 4 )
blend_times = [  ]
autoplay = "Bobbing"

[node name="MagnetRadius" type="Area2D" parent="." index="6"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="Shape" type="CollisionShape2D" parent="MagnetRadius" index="0"]

shape = SubResource( 5 )

[connection signal="collected" from="." to="PickupSound" method="play"]

[connection signal="collected" from="." to="AnimationPlayer" method="play" binds= [ "Collected" ]]

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="queue_free"]

[connection signal="body_entered" from="PickupArea" to="." method="_on_collected"]


